--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="column" ng-repeat="art in arts" style="padding: 30px">
             <div class="ui fluid card">
                 <div class="image">
-                   <!--<img src="/images/{{art.file}}">-->
+                   <img src="/images/{{art.file}}">
                 </div>
                 <div class="content">
                     <a class="header">{{art.title}}</a>
